--- a/super_simple_developer/html_css_course/buttons.html
+++ b/super_simple_developer/html_css_course/buttons.html
@@ -1,1 +1,50 @@
-<style></style>
+<style>
+.subscribe-btn {
+    background-color: rgb(223, 49, 49);
+    height: 50px;
+    width: 150px;
+    color: white;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.join-btn {
+    background-color: white;
+    border-style: solid;
+    border-color: rgb(41, 126, 196);
+    border-width: 2px;
+    height: 50px;
+    width: 100px;
+    color: rgb(15, 79, 163);
+    cursor: pointer;
+    letter-spacing: 1px;
+}
+
+.tweet-btn
+{
+    background-color: rgb(82, 118, 235);
+    border: none;
+    height: 50px;
+    width: 140px;
+    border-radius: 25px;
+    color: white;
+    margin-left: 10px;
+    cursor: pointer;
+    font-size: 20px;
+    font-weight: bold;
+}
+</style>
+
+<button class="subscribe-btn">
+    SUBSCRIBE
+</button>
+
+<button class="join-btn">
+    JOIN
+</button>
+
+<button class="tweet-btn">
+    Tweet
+</button>
