--- a/super_simple_developer/html_css_course/buttons.html
+++ b/super_simple_developer/html_css_course/buttons.html
@@ -8,8 +8,14 @@
     border-radius: 3px;
     cursor: pointer;
     margin-right: 10px;
+    transition: opacity 1s;
 }
-
+.subscribe-btn:hover {
+    opacity: 0.7;
+}
+.subscribe-btn:active {
+    opacity: 0.5;
+}
 .join-btn {
     background-color: white;
     border-style: solid;
@@ -20,8 +26,12 @@
     color: rgb(15, 79, 163);
     cursor: pointer;
     letter-spacing: 1px;
+    transition: all 2s;
 }
-
+.join-btn:hover {
+    background-color: rgb(15, 79, 163);
+    color: white;
+}
 .tweet-btn
 {
     background-color: rgb(82, 118, 235);
@@ -34,6 +44,10 @@
     cursor: pointer;
     font-size: 20px;
     font-weight: bold;
+    transition: 1s;
+}
+.tweet-btn:hover {
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
 }
 </style>
 
