--- a/design_course/html_css_crash_course_2021/index.html
+++ b/design_course/html_css_crash_course_2021/index.html
@@ -30,5 +30,90 @@
             </nav>
         </div>
     </div>
+
+    <section class="hero">
+        <div class="container">
+            <div class="left-col">
+                <p class="subhead">It's Nitty &amp; Gritty</p>
+                <h1>A Web Design </h1>
+    
+                <div class="hero-cta">
+                    <a href="#" class="primary-cta">Try for free</a>
+                    <a href="#" class="watch-video-cta">
+                        <img src="images/watch.svg" alt="Watch a video">Watch a video
+                    </a>
+                </div>
+            </div>
+    
+            <img src="images/illustration.svg" class="hero-img" alt="Illustration">
+        </div>
+    </section>
+<section class="features-section">
+    <div class="container">
+        <ul class="features-list">
+            <li>Unlimited Tasks</li>
+            <li>SMS Task Reminders</li>
+            <li>Confetti Explosions upon Task Completions</li>
+            <li>Social Media Announcements</li>
+            <li>Real Time Collaboration</li>
+            <li>Other awesome features</li>
+        </ul>
+
+        <img src="images/holding-phone.jpg" alt="Man holding phone">
+    </div>
+</section>
+
+<section class="testimonials-section">
+    <div class="container">
+        <ul>
+            <li>
+                <img src="images/person.jpg" alt="Person">
+
+                <blockquote>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                    invidunt ut labore et dolore"</blockquote>
+                <cite>- Jane Doe</cite>
+            </li>
+            <li>
+                <img src="images/person.jpg" alt="Person">
+
+                <blockquote>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                    invidunt ut labore et dolore"</blockquote>
+                <cite>- Jane Doe</cite>
+            </li>
+            <li>
+                <img src="images/person.jpg" alt="Person">
+
+                <blockquote>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
+                    invidunt ut labore et dolore"</blockquote>
+                <cite>- Jane Doe</cite>
+            </li>
+        </ul>
+    </div>
+</section>
+
+<section class="contact-section">
+    <div class="container">
+        <div class="contact-left">
+            <h2>Contact</h2>
+
+            <form action="">
+                <label for="name">Name</label>
+                <input type="text" id="name" name="name">
+
+                <label for="message">Message</label>
+                <textarea name="message" id="message" cols="30" rows="10"></textarea>
+
+                <input type="submit" class="send-message-cta" value="Send message">
+            </form>
+        </div>
+        <div class="contact-right">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30986.59036960035!2d33.73867012143378!3d-13.87957722478987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1921d57160f257a5%3A0xba452cd01f865530!2sArea%2025%2C%20Lilongwe!5e0!3m2!1sen!2smw!4v1700757888190!5m2!1sen!2smw"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+    </div>
+</section>
 </body>
 </html>
