--- a/design_course/html_css_crash_course_2021/index.html
+++ b/design_course/html_css_crash_course_2021/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="navbar">
         <div class="container">
-            <a href="#">Mwakanemela <span>Kayange</span></a>
+            <a class="logo" href="#">Mwakanemela <span>Kayange</span></a>
 
             <img id="mobile-cta" class="mobile-menu" src="images/menu.svg" alt="">
            
@@ -67,21 +67,21 @@
     <div class="container">
         <ul>
             <li>
-                <img src="images/person.jpg" alt="Person">
+                <img src="images/me.jpg" alt="Person">
 
                 <blockquote>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
                     invidunt ut labore et dolore"</blockquote>
                 <cite>- Jane Doe</cite>
             </li>
             <li>
-                <img src="images/person.jpg" alt="Person">
+                <img src="images/me.jpg" alt="Person">
 
                 <blockquote>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
                     invidunt ut labore et dolore"</blockquote>
                 <cite>- Jane Doe</cite>
             </li>
             <li>
-                <img src="images/person.jpg" alt="Person">
+                <img src="images/me.jpg" alt="Person">
 
                 <blockquote>"Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
                     invidunt ut labore et dolore"</blockquote>
