--- a/self_driving_car/index.html
+++ b/self_driving_car/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Self Driving Car</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
     <canvas id="myCanvas"></canvas>
-    <script src="main.js"></script>
+    <script src="js/car.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
